fix Bug #43793: zlib filter is unable to auto-detect gzip/zlib file headers